# pixels

./: .gitignore  README.md
backend/: .sample.env  Dockerfile  img_upload_utils.py  main.py  op.txt  operations.py  pyproject.toml  requirements.txt  tasks.py
custom models/: segment.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/components/: EducationPanel.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  ImageUploader.tsx  MultiImageUploader.tsx  ProcessingWorkflow.tsx  ResultViewer.tsx  TaskParameters.tsx  TaskSelector.tsx
frontend/src/components/ui/: AboutModel.jsx  Footer.jsx  Header.jsx  ImageUpload.jsx  ProcessedImage.jsx  Sidebar.jsx
frontend/src/data/: OperationsData.js  task.md  tasks.ts
frontend/src/lib/: api.ts  types.ts  zipUtils.ts
frontend/src/pages/: About.tsx  Documentation.tsx  Index.tsx  Lab.tsx  Learn.tsx  NotFound.tsx
